--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,8 @@
-%h1 Hello!
+%h1.header pablo
+.social
+	%a.icon{:href=>"https://github.com/pablo-merino"}="&#62208;"
+	%a.icon{:href=>"https://twitter.com/_pmerino"}="&#62217;"
+	%a.icon{:href=>"http://blog.pmerino.me"}="&#62229;"
+	%a.icon{:href=>"https://instagram.com/_pmerino"}="&#62253;"
+
+.small_subtitle Just a backend hacker.
