--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 	%head
-		%title
+		%title= "Pablo Merino"
 		%link{:href => '/main.css', :rel => 'stylesheet', :type => 'text/css'}
 		%link{:href => '/centerer.css', :rel => 'stylesheet', :type => 'text/css'}
 	%body
